--- a/SilverMoon/productions/templates/about.html
+++ b/SilverMoon/productions/templates/about.html
@@ -8,7 +8,7 @@
     <title>سیلور🌖-سبکی که اهمیت دارد</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.png' %}">
     <!-- Place favicon.ico in the root directory -->
 
@@ -346,6 +346,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-12 col-12">
                             <div class="about__img">
+                                
                                 <img src="{% static 'img/about/about__1.jpg' %}" alt="">
                             </div>
                         </div>
@@ -362,7 +363,8 @@
                             <div class="video__img">
                                 <img src="{% static 'img/about/video-banner__1.jpg' %}" alt="">
                                 <div class="video__icon">
-                                    <a class="video-btn" href="{% static 'videos/ramin.mp4' %}"> <i class="fa fa-play"></i></a>
+                                    <a class="video-btn" href="{% static 'videos/c/o/v/ramin.mp4' %}"><i class="fa fa-play"></i></a>
+
                                 </div>
                             </div>
                         </div>
@@ -395,8 +397,8 @@
                     <h4 class="footer__title">اطلاعات تماس</h4>
                     <div class="footer__menu">
                     <ul>
-                        <li><a href="#">تلفن:09035774781</a></li>
-                        <li><a href="#">ایمیل: nima.abarghooie1@gmail.com</a></li>
+                        <li><a href="#">تلفن:09102052440</a></li>
+                        <li><a href="#">ایمیل: shayanaminaei@gmail.com</a></li>
                         <li><a href="#">شعبه حضوری: تهران-خیابان مولوی،بازارچه سعادت،پاساژ پرشین٫طبقه همکف٫پلاک۳۲۰</a></li>
                     </ul>
                   </div>
