--- a/SilverMoon/productions/templates/contact.html
+++ b/SilverMoon/productions/templates/contact.html
@@ -340,7 +340,7 @@
                         <div class="col-xl-4 col-lg-4 col-md-6 col-12">
                             <div class="contactarea__single">
                                 <h3>آدرس ایمیل</h3>
-                                <p>nima.abarghooie1@gmail.com <br></p>
+                                <p>shayanaminaei@gmail.com <br></p>
                             </div>
                         </div>
 
@@ -405,8 +405,8 @@
                     <h4 class="footer__title">اطلاعات تماس</h4>
                     <div class="footer__menu">
                     <ul>
-                        <li><a href="#">تلفن:09035774781</a></li>
-                        <li><a href="#">ایمیل: nima.abarghooie1@gmail.com</a></li>
+                        <li><a href="#">تلفن:09102052440</a></li>
+                        <li><a href="#">ایمیل: shayanaminaei@gmail.com</a></li>
                         <li><a href="#">شعبه حضوری: تهران-خیابان مولوی،بازارچه سعادت،پاساژ پرشین٫طبقه همکف٫پلاک۳۲۰</a></li>
                     </ul>
                   </div>
