--- a/productions/templates/category_list.html
+++ b/productions/templates/category_list.html
@@ -425,8 +425,8 @@
                     <h4 class="footer__title">اطلاعات تماس</h4>
                     <div class="footer__menu">
                     <ul>
-                        <li><a href="#">تلفن:09035774781</a></li>
-                        <li><a href="#">ایمیل: nima.abarghooie1@gmail.com</a></li>
+                        <li><a href="#">تلفن:09102052440</a></li>
+                        <li><a href="#">ایمیل: shayanaminaei@gmail.com</a></li>
                         <li><a href="#">شعبه حضوری: تهران-خیابان مولوی،بازارچه سعادت،پاساژ پرشین٫طبقه همکف٫پلاک۳۲۰</a></li>
                     </ul>
                   </div>
