--- a/productions/templates/contact.html
+++ b/productions/templates/contact.html
@@ -340,14 +340,14 @@
                         <div class="col-xl-4 col-lg-4 col-md-6 col-12">
                             <div class="contactarea__single">
                                 <h3>آدرس ایمیل</h3>
-                                <p>nima.abarghooie1@gmail.com <br></p>
+                                <p>shayanaminaei@gmail.com <br></p>
                             </div>
                         </div>
 
                         <div class="col-xl-4 col-lg-4 col-md-6 col-12">
                             <div class="contactarea__single">
                                 <h3>شماره تلفن</h3>
-                                <p>09035774781 <br></p>
+                                <p>09102052440 <br></p>
                             </div>
                         </div>
 
@@ -370,6 +370,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-xl-12">
+                               <!-- #google map-->
                                 <div class="contact__map__inner">
                                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d698.7133741364287!2d51.42148870745333!3d35.669701933547465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f8e0100080d5b2d%3A0xd805a764b20487dc!2z2KjYp9iy2KfYsSDYqNiy2LHaryDYqtmH2LHYp9mGINm-2KfYs9in2pgg2b7Ysdi024zZhg!5e0!3m2!1sfa!2s!4v1739353138541!5m2!1sfa!2s" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                 </div>
@@ -405,8 +406,8 @@
                     <h4 class="footer__title">اطلاعات تماس</h4>
                     <div class="footer__menu">
                     <ul>
-                        <li><a href="#">تلفن:09035774781</a></li>
-                        <li><a href="#">ایمیل: nima.abarghooie1@gmail.com</a></li>
+                        <li><a href="#">تلفن:09102052440</a></li>
+                        <li><a href="#">ایمیل: shayanaminaei@gmail.com</a></li>
                         <li><a href="#">شعبه حضوری: تهران-خیابان مولوی،بازارچه سعادت،پاساژ پرشین٫طبقه همکف٫پلاک۳۲۰</a></li>
                     </ul>
                   </div>
