--- a/customers/templates/login.html
+++ b/customers/templates/login.html
@@ -649,7 +649,7 @@
                     success: function (response) {
                         console.log('ok');
                         alert("ورود موفقیت آمیز!");
-                        window.location.href = 'http://127.0.0.1:8000/accounts/edit/profile/';
+                        window.location.href = 'http://127.0.0.1:8000/';
                     },
                     error: function(xhr, status, error) {
                         alert("نام کاربری یا رمز عبور اشتباه است!");
