--- a/productions/templates/category_list.html
+++ b/productions/templates/category_list.html
@@ -339,7 +339,7 @@
                             <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-6">
                                 <div class="category__single category__single__2">
                                     <div class="category__img__2">
-                                        <img src="{{category.photo.url}}" alt="">
+                                        <a href="{{category.get_absolute_url}}"><img  src="{{category.photo.url}}" alt=""> </a>
                                     </div>
                                     <div class="category__text category__text__2">
                                         <h5><a href="{{category.get_absolute_url}}">{{category.category_name}}</a></h5>
